struggling with pagination

--- a/cars-frontend-v.2/src/index.html
+++ b/cars-frontend-v.2/src/index.html
@@ -5,6 +5,9 @@
     <title>Angular10JwtAuth</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
+    <!-- Bootstrap core CSS -->
+<!--    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       rel="stylesheet"
